[package]
authors = ["adamanteye <ada@adamanteye.cc>"]
edition = "2024"
license = "MIT"
name = "heartbeat"
publish = false
version = "0.1.0"

[dependencies]
axum = "0.8"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
rusqlite = { version = "0.34", features = ["chrono"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.44", features = ["rt-multi-thread", "signal"] }
toml = "0.8"
