[package]
authors = ["adamanteye <ada@adamanteye.cc>"]
edition = "2024"
license = "MIT"
name = "heartbeat"
publish = false
version = "0.1.3"

[dependencies]
axum = "0.8"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
rusqlite = { version = "0.35", features = ["bundled", "chrono"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "signal"] }
toml = "0.8"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"
